Ajout de code, correction et suppression de bugs
Jeu presque fonctionnel