@@ -1,15 +1,19 @@
+import java.util.ArrayList;
 import java.util.Iterator;
-import java.util.LinkedList;
 
 public class JeuRapide extends Jeu {
 	
 	public JeuRapide(String nomJoueur, int nombreJoueurs) {
-		super(nomJoueur, nombreJoueurs);
+		super(nomJoueur, nombreJoueurs);	
+	}
+	
+	@Override
+	protected void lancerJeu() {
 		lancerManche();
-		LinkedList<Joueur> gagnants = this.getGagnantsTour();
+		ArrayList<Joueur> gagnants = this.getGagnantsTour();
 		if(gagnants.size() == 1) {
-			System.out.println("Le gagnant de la partie est " + gagnants.getFirst().getNom() + 
-					" avec " + gagnants.getFirst().getNombreMenhirs() + " menhirs et " + gagnants.getFirst().getNombreGraines() + " graines.");	
+			System.out.println("Le gagnant de la partie est " + gagnants.get(0).getNom() + 
+					" avec " + gagnants.get(0).getNombreMenhirs() + " menhirs et " + gagnants.get(0).getNombreGraines() + " graines.");	
 		} else {
 			String message = "Égalité entre";
 			for(Iterator<Joueur> it = gagnants.iterator();it.hasNext();) {
